# parametric_hrtf

./: .gitignore  Cargo.toml  Makefile  README.md
crates/phrtf-dsp/: Cargo.toml  LICENSE-APACHE  README.md
crates/phrtf-dsp/docs/: design.md  integration.md  limitations.md  math.md
crates/phrtf-dsp/examples/: export_elevation_bands.rs  export_response_csv.rs  print_params.rs  process_sine.rs
crates/phrtf-dsp/src/: air_absorption.rs  biquad.rs  lib.rs  math.rs  phrtf.rs  proximity.rs  renderer.rs
crates/phrtf-dsp/tests/: spatial.rs
crates/phrtf-webclap/: Cargo.toml  build.rs  plugin.json
crates/phrtf-webclap/src/: lib.rs
crates/phrtf-webclap/ui/: index.html  main.js  protocol.js  protocol.test.mjs  styles.css
crates/wclap-plugin/: Cargo.toml
crates/wclap-plugin/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: README.md  飯田一博先生のElevation方向パラメトリックHRTF研究.md
docs/phrtf_distance_proximity/: README.md
docs/phrtf_distance_proximity/docs/: math.md
docs/phrtf_distance_proximity/src/: delay.rs  geometry.rs  lib.rs  noise.rs  phrtf.rs  renderer.rs
hrtf_debug/: README.md  analyze_sofa.py  compare_elevation.py
scripts/: serve.py  serve.sh
web/: README.md  index.html  page-proxy-service-worker.js  server.py  vibe.html
web/audio/: twang.m4a
web/clap-audionode/: clap-audionode.mjs  clap-audioworkletprocessor.mjs  host-imports.mjs
web/clap-audionode/host-dev/: CMakeLists.txt  Makefile  README.md
web/clap-audionode/host-dev/source/: cbor-bytes.cpp  cbor-bytes.h  common.h  host.cpp  hosted-plugin.h  hosted-wclap.h
web/clap-audionode/wclap-js/es6/: wclap.mjs
web/clap-audionode/wclap-js/es6/wasi/: wasi-bundled.mjs  wasi.mjs
web/examples/: README.md
web/examples/as-clap/: README.md
web/examples/clack/: README.md
web/examples/signalsmith-basics/: README.md
web/examples/signalsmith-clap-cpp/: README.md
